2019-11-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk: Remove trailing blanks.
	* testsuite/lib/poke-dg.exp: Likewise.
	* src/pvm.jitter: Likeise.
	* src/pkl-typify.c: Likewise.
	* src/pkl-tab.y: Likewise.
	* src/pkl-promo.c: Likewise.
	* src/pkl-gen.c: Likewise.
	* src/pkl-ast.h: Likewise.
	* src/pkl-ast.c: Likewise.
	* src/pk-editor.c: Likewise.
	* testsuite/poke.map/ass-map-1.pk: Remove empty lines at EOF.
	* testsuite/poke.std/atoi-9.pk: Likewise.
	* testsuite/poke.std/atoi-8.pk: Likewise.
	* testsuite/poke.std/atoi-7.pk: Likewise.
	* testsuite/poke.std/atoi-6.pk: Likewise.
	* testsuite/poke.std/atoi-5.pk: Likewise.
	* testsuite/poke.std/atoi-4.pk: Likewise.
	* testsuite/poke.std/atoi-3.pk: Likewise.
	* testsuite/poke.std/atoi-2.pk: Likewise.
	* testsuite/poke.std/atoi-13.pk: Likewise.
	* testsuite/poke.std/atoi-12.pk: Likewise.
	* testsuite/poke.std/atoi-11.pk: Likewise.
	* testsuite/poke.std/atoi-10.pk: Likewise.
	* testsuite/poke.std/atoi-1.pk: Likewise.
	* testsuite/poke.pkl/try-until-3.pk: Likewise.
	* testsuite/poke.pkl/strings-1.pk: Likewise.
	* testsuite/poke.pkl/ass-map-diag-2.pk: Likewise.
	* testsuite/poke.pkl/ass-map-diag-1.pk: Likewise.
	* testsuite/poke.map/maps-offsets-2.pk: Likewise.
	* testsuite/poke.map/maps-offsets-1.pk: Likewise.
	* testsuite/poke.map/maps-ios-1.pk: Likewise.
	* testsuite/poke.map/ass-map-2.pk: Likewise.
	* .x-sc_prohibit_atoi_atof: New file.
	* doc/poke.texi (IO Spaces): s/filesystem/file system/.
	* src/ios.c: Avoid double word in comment.
	* man/Makefile.am (poke.1): Do not use $< in this non-implicit
	rule.

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/pk-cmd.h (completer_t): New typedef.
	(pk_cmd) [completer]: New member;

2019-11-13 John Darrington <john@darrington.wattle.id.au>

	* src/pkl-env.h (pkl_ast_node_iter): New struct.
	(pkl_env_iter_begin): New declaration.
	(pkl_env_iter_next): New declaration.
	(pkl_env_iter_end): New declaration.