@@ -23,14 +23,12 @@ MAINTAINERCLEANFILES = $(man_MANS)
 # The man pages depend on the version number.
 common_mandeps = $(top_srcdir)/configure.ac
 
-# Jose writes:
-##  Depend on the source, not the binary; we don't need to regenerate
-##  the binary when any source file changes, only the main one.
-# However, there is no guarantee that the binary will exist, so dependence
-# on the source is appropriate, and help2man is cheap anyway.
-
+# Depend on the source, not the binary; we don't need to regenerate
+# the binary when any source file changes, only the main one.
 # Use -o so that the `missing' program can infer the output file.
 
-poke.1: $(top_builddir)/src/poke $(common_mandeps)
-	POKEDATADIR=$(abs_top_srcdir)/src $(HELP2MAN) -p poke --name="The GNU extensible binary editor" \
-		$(top_builddir)/src/poke -o $@
+poke.1: $(top_srcdir)/src/poke.c $(common_mandeps)
+	$(MAKE) $(AM_MAKEFLAGS) $(builddir)/../src/poke$(EXEEXT)
+	POKEDATADIR=$(abs_top_srcdir)/src \
+           $(HELP2MAN) -p poke --name="The GNU extensible binary editor" \
+		$(builddir)/../src/poke$(EXEEXT) -o $@
